5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1613_2043.log
== TEST (2019-04-04 18:14:56) 
-- CODE:
nota1=input(valor)
nota2=input(valor)
nota3=input(valor)
nota4=input(valor)

media ponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print(media ponderada)
-- ERROR:
File "XXXX", line 6
    media ponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:05) 
-- CODE:
nota1=input(valor)
nota2=input(valor)
nota3=input(valor)
nota4=input(valor)

mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print(mediaponderada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1=input(valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:30) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print(mediaponderada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:55) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:33) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=(nota1*1 + nota2*2 + nota3*3 + nota4*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediaponderada=(nota1*1 + nota2*2 + nota3*3 + nota4*4)/(1+2+3+4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:24) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- ERROR:
File "XXXX", line 8
    print(round(mediaponderada,  2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:30) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- ERROR:
File "XXXX", line 8
    print(round(mediaponderada,  2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:38) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
File "XXXX", line 8
    print=(round(mediaponderada,  2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:39) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
File "XXXX", line 8
    print=(round(mediaponderada,  2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:20:50) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
File "XXXX", line 8
    print=(round(mediaponderada,  2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:21:00) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
File "XXXX", line 8
    print=(round(mediaponderada,  2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:21:02) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/(1+2+3+4)

print=(round(mediaponderada, 2))
-- ERROR:
File "XXXX", line 8
    print=(round(mediaponderada, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:21:26) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print+(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:21:50) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")

mediaponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediaponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:23:20) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")
p1=1
p2=2
p3=3
p4=4
mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(1+2+3+4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:26:17) 
-- CODE:
nota1=input("valor")
nota2=input("valor")
nota3=input("valor")
nota4=input("valor")
p1=1
p2=2
p3=3
p4=4
mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:31:47) 
-- CODE:
nota1=int(input("valor"))
nota2=int(input("valor"))
nota3=int(input("valor"))
nota4=int(input("valor"))
p1=1
p2=2
p3=3
p4=4
mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:32:03) 
-- CODE:
nota1=int(input("valor"))
nota2=int(input("valor"))
nota3=int(input("valor"))
nota4=int(input("valor"))
p1=1
p2=2
p3=3
p4=4
mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- EXECUTION TIME:
0.18042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2043/main.py", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:32:09) 
-- CODE:
nota1=int(input("valor"))
nota2=int(input("valor"))
nota3=int(input("valor"))
nota4=int(input("valor"))
p1=1
p2=2
p3=3
p4=4
mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:32:34) 
-- CODE:
nota1=int(input("valor"))
nota2=int(input("valor"))
nota3=int(input("valor"))
nota4=int(input("valor"))

p1=1
p2=2
p3=3
p4=4

mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- EXECUTION TIME:
0.15337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2043/main.py", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:32:56) 
-- CODE:
nota1=float(input("valor"))
nota2=float(input("valor"))
nota3=float(input("valor"))
nota4=float(input("valor"))

p1=1
p2=2
p3=3
p4=4

mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:33:05) 
-- CODE:
nota1=float(input("valor"))
nota2=float(input("valor"))
nota3=float(input("valor"))
nota4=float(input("valor"))

p1=1
p2=2
p3=3
p4=4

mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- EXECUTION TIME:
0.133227
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:

-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:

-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:33:05) 
-- CODE:
nota1=float(input("valor"))
nota2=float(input("valor"))
nota3=float(input("valor"))
nota4=float(input("valor"))

p1=1
p2=2
p3=3
p4=4

mediaponderada=(nota1*p1+nota2*p2+nota3*p3+nota4*p4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:37:01) 
-- CODE:
nota1=float(input("valor"))
nota2=float(input("valor"))
nota3=float(input("valor"))
nota4=float(input("valor"))


mediaponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/(p1+p2+p3+p4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/(p1+p2+p3+p4)
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:37:57) 
-- CODE:
nota1=float(input("valor"))
nota2=float(input("valor"))
nota3=float(input("valor"))
nota4=float(input("valor"))


mediaponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(nota1*1+nota2*2+nota3*3+nota4*4)/(p1+p2+p3+p4)
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:40:13) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
d=float(input("valor"))


mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:40:58) 
-- CODE:
a=float(input(" "))
b=float(input(" "))
c=float(input(" "))
d=float(input(" "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:43:36) 
-- CODE:
a=float(input(" "))
b=float(input(" "))
c=float(input(" "))
d=float(input(" "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:44:19) 
-- CODE:
a=float(input(" "))
b=float(input(" "))
c=float(input(" "))
d=float(input(" "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:44:30) 
-- CODE:
a=float(input(" a"))
b=float(input("b"))
c=float(input(" c"))
d=float(input("d "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:45:13) 
-- CODE:
a=float(input(" a"))
b=float(input("b"))
c=float(input(" c"))
d=float(input("d "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(14.866,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:45:24) 
-- CODE:
a=float(input(" a"))
b=float(input("b"))
c=float(input(" c"))
d=float(input("d "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(14.866,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:45:46) 
-- CODE:
a=float(input(" a"))
b=float(input("b"))
c=float(input(" c"))
d=float(input("d "))


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(14.866,  2))
-- EXECUTION TIME:
0.218393
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:

-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:

-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:46:37) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print=(round(mediaponderada,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mediaponderada=(a*1+b2*2+c*3+d*4)/(1+2+3+4)
NameError: name 'b2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:47:14) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:47:24) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.15068
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:47:53) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.274014
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:48:00) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:48:09) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.143544
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:48:50) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:49:02) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.24256
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:49:03) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.12297
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1613/2043/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:51:55) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:52:04) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.263734
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:53:05) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:53:19) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.228135
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:53:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.220744
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:53:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.250931
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:53:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.289506
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:53:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.34048
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:53:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())


mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.460348
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.94
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:54:02) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:54:18) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.177051
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:27) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.158772
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:28) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.171279
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:29) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.226362
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
8.2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:29) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.192624
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
8.2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:29) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.18384
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1613/2043/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:30) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.112525
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1613/2043/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:30) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.127877
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1613/2043/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:30) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.21876
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:11:31) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:11:32) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:11:32) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:11:57) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.147965
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:04) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:22) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

p1=1
p2=2
p3=3
p4=4


mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)

print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.233681
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:31) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
p1=1
p2=2
p3=3
p4=4
mediaponderada=(a*p1+b*p2+c*p3+d*p4)/(p1+p2+p3+p4)
print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:01) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:06) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())

mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:05) 
-- CODE:
a=float(input("nota1 "))
b=float(input("nota2 "))
c=float(input("nota3 "))
d=float(input("nota4 "))

mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:14:19) 
-- CODE:
a=float(input("nota1 "))
b=float(input("nota2 "))
c=float(input("nota3 "))
d=float(input("nota4 "))

mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(mediaponderada,  2))
-- EXECUTION TIME:
0.208475
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:31:44) 
-- CODE:
a=float(input("nota1 "))
b=float(input("nota2 "))
c=float(input("nota3 "))
d=float(input("nota4 "))

mediaponderada=(a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(mediaponderada,  2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
